   * Fixed color key disparities between the Add-ons Manager dialog and the
     add-on Description dialog.
   * It is now possible to choose the neutral/fallback add-on sorting in
     the Add-ons Manager dialog used when no columns have been sorted by
     the user.
   * Report errors caused by faulty local .pbl files properly instead of
     presenting them as network errors.
 * AI:
   * Micro AIs:
     * New Simple Attack Micro AI
     * Messenger MAI now works with units (both messenger and escort) without
       weapons and when path to next waypoint is entirely blocked
     * Fixed bug that prevented removal of sticky MAIs
 * Campaigns:
   * Legend of Wesmere:
     * Removed now redundant MP code.
     * Added new CampaignWML attributes: "type", "min_players", "max_players".
     * Added new ScenarioWML attributes: "new_game_title",
       "force_use_map_settings".
     * Adjusted "controller" and side recruits for MP.
 * Engine:
   * CampaignWML support for MP including difficulties, extra defines etc.
   * Use the same codepath to initialize every MP campaign's scenario, thus
     allowing the display of a functional MP "Connect/Wait" screen before the
     next scenario.
   * Reload game config for non-host players in order to match the host's
     config, if possible. Reloads will only happen for MP campaigns using
     CampaignWML syntax.
 * Graphics
   * Full animations for the Dwarven Thunderer line.
 * Language and i18n:
   * Updated translations: British English, German, Greek, Indonesian,
     Lithuanian, Portuguese, Vietnamese
   * Improved internationalization of notifications on Windows and OS X.
 * Lua API:
   * Added scroll_to_leader field (read/write) to wesnoth.sides table
    elements.
 * Multiplayer:
   * Fixed clearing map data when there is no shroud and level is sent
     with "store_next_scenario".
   * Update game's side data, slots and state in server during next scenario
     initialization.